--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,20 @@
  *  Author: Kevin Reese
  */
 
+ body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+ }
+
  .grid-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    width: 300px;
-    height: 300px;
-    margin: auto;
+    width: 600px;
+    height: 600px;
     gap: 0px;
-    padding-top: 50px;
 }
 
 .grid-item {
@@ -24,22 +30,23 @@
     height: 100%;
 }
 
-.grid-drop-container {
-    width: 245px;
-    margin: auto;
-    padding-top: 100px;
+.drop-container {
+    width: 270px;
+    padding-right: 40px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
 }
 
-.btn-container {
-    width: 100px;
-    padding: 20px;
-    margin: auto;
-    display: flex;
+.drop-container select {
+    margin-top: 20px;
 }
 
-.run-btn, .reset-btn {
+.btn-container {
+    width: 100px;
+    padding-left: 40px;
+}
+
+.btn-container button {
     border: none;
     width: 60px;
     background-color: black;
@@ -47,9 +54,9 @@
     font-weight: bold;
     font-size: 16px;
     font-family: 'Courier New', Courier, monospace;
-    margin-right: 20px;
+    margin: 30px 0;
 }
 
-.run-btn:hover, .reset-btn:hover {
+.btn-container button:hover  {
     opacity: 0.7;
 }
